--- a/GrandTravel/ViewController1.xib
+++ b/GrandTravel/ViewController1.xib
@@ -25,7 +25,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EXPLORING THE WORLD YOUR WAY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pvM-XL-wK4">
-                    <rect key="frame" x="0.0" y="435" width="414" height="26.5"/>
+                    <rect key="frame" x="0.0" y="108" width="414" height="26.5"/>
                     <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -34,9 +34,8 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="pvM-XL-wK4" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="8oF-wB-klm"/>
-                <constraint firstItem="pvM-XL-wK4" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="hpA-oY-JQO"/>
                 <constraint firstItem="pvM-XL-wK4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="oZo-IU-TTC"/>
-                <constraint firstItem="pvM-XL-wK4" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="pte-Y5-18g"/>
+                <constraint firstItem="pvM-XL-wK4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="64" id="xfD-lB-V82"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="98.4375"/>
