--- a/GrandTravel/TourViewController.xib
+++ b/GrandTravel/TourViewController.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TourViewController" customModule="GrandTravel" customModuleProvider="target">
             <connections>
-                <outlet property="label" destination="KDk-PN-JHt" id="7hj-EC-l3X"/>
+                <outlet property="imageView" destination="LSa-uR-oXx" id="YP3-J1-zBL"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,17 +21,18 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tour view" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KDk-PN-JHt">
-                    <rect key="frame" x="32" y="76" width="71" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LSa-uR-oXx">
+                    <rect key="frame" x="0.0" y="44" width="414" height="256"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="256" id="b4p-OV-EFf"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="KDk-PN-JHt" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="32" id="CS0-jf-anW"/>
-                <constraint firstItem="KDk-PN-JHt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="32" id="ZDI-4F-8eG"/>
+                <constraint firstItem="LSa-uR-oXx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Ap3-0h-uwC"/>
+                <constraint firstItem="LSa-uR-oXx" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="kxf-7y-GVf"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="LSa-uR-oXx" secondAttribute="trailing" id="tPw-cj-bHc"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="102.45535714285714"/>
