--- a/GrandTravel/ViewController3.xib
+++ b/GrandTravel/ViewController3.xib
@@ -21,11 +21,24 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MgZ-BL-6r2">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MgZ-BL-6r2">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Veh-2S-vcI">
-                            <rect key="frame" x="0.0" y="309" width="414" height="200"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Veh-2S-vcI">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EXPLORE TOP DESTINATION" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5P-8L-kKd">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
+                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="c5P-8L-kKd" firstAttribute="leading" secondItem="Veh-2S-vcI" secondAttribute="leading" id="23O-2t-bRL"/>
+                                <constraint firstAttribute="trailing" secondItem="c5P-8L-kKd" secondAttribute="trailing" id="ZTh-EM-76C"/>
+                                <constraint firstItem="c5P-8L-kKd" firstAttribute="top" secondItem="Veh-2S-vcI" secondAttribute="top" constant="16" id="mPl-My-nKt"/>
+                            </constraints>
                         </stackView>
                     </subviews>
                     <constraints>
@@ -45,6 +58,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="MgZ-BL-6r2" secondAttribute="trailing" id="xrg-KB-FM8"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
         </view>
     </objects>
 </document>
