--- a/GrandTravel/TourViewController.xib
+++ b/GrandTravel/TourViewController.xib
@@ -12,8 +12,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TourViewController" customModule="GrandTravel" customModuleProvider="target">
             <connections>
+                <outlet property="descriptionLabel" destination="TFH-Fk-tSi" id="vUa-3h-0ci"/>
                 <outlet property="imageView" destination="LSa-uR-oXx" id="YP3-J1-zBL"/>
                 <outlet property="nameLabel" destination="aI3-vx-nyR" id="CsN-tW-Eiw"/>
+                <outlet property="priceLabel" destination="qB5-nZ-koc" id="HYr-uX-xFN"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,26 +24,48 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LSa-uR-oXx">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LSa-uR-oXx">
                     <rect key="frame" x="0.0" y="44" width="414" height="256"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="256" id="b4p-OV-EFf"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aI3-vx-nyR">
-                    <rect key="frame" x="0.0" y="316" width="414" height="26.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="French Autumn" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aI3-vx-nyR">
+                    <rect key="frame" x="0.0" y="316" width="256" height="26.5"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="256" id="H2n-dL-jNG"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                     <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$1625.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qB5-nZ-koc">
+                    <rect key="frame" x="272" y="319" width="73" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="1" green="0.3780092108" blue="0.073474410229999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFH-Fk-tSi">
+                    <rect key="frame" x="0.0" y="358.5" width="414" height="64"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="64" id="mI7-yY-Co1"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TFH-Fk-tSi" secondAttribute="trailing" id="1RM-OG-pLL"/>
+                <constraint firstItem="TFH-Fk-tSi" firstAttribute="top" secondItem="aI3-vx-nyR" secondAttribute="bottom" constant="16" id="8MS-UZ-xEG"/>
                 <constraint firstItem="LSa-uR-oXx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Ap3-0h-uwC"/>
                 <constraint firstItem="aI3-vx-nyR" firstAttribute="top" secondItem="LSa-uR-oXx" secondAttribute="bottom" constant="16" id="IBT-6z-qfq"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="aI3-vx-nyR" secondAttribute="trailing" id="QzK-IM-1ie"/>
                 <constraint firstItem="aI3-vx-nyR" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="RZ9-7Y-52q"/>
+                <constraint firstItem="TFH-Fk-tSi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Ybv-v7-1Gn"/>
+                <constraint firstItem="qB5-nZ-koc" firstAttribute="centerY" secondItem="aI3-vx-nyR" secondAttribute="centerY" id="gFR-EA-sbb"/>
                 <constraint firstItem="LSa-uR-oXx" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="kxf-7y-GVf"/>
+                <constraint firstItem="qB5-nZ-koc" firstAttribute="leading" secondItem="aI3-vx-nyR" secondAttribute="trailing" constant="16" id="lqW-ET-zl8"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="LSa-uR-oXx" secondAttribute="trailing" id="tPw-cj-bHc"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
